translate unit tests, linting

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha tests --recursive",
     "test:unit": "NODE_ENV=test ./node_modules/mocha/bin/mocha tests/unit --recursive",
     "test:e2e": "NODE_ENV=test ./node_modules/mocha/bin/mocha tests/e2e --recursive",
-    "config:check": "node tests/configs/check_config.js"
+    "config:check": "node tests/configs/check_config.js",
+    "lint": "grunt"
   },
   "repository": {
     "type": "git",
@@ -44,6 +45,7 @@
     "grunt-stylelint": "latest",
     "grunt-yamllint": "latest",
     "http-auth": "^3.2.3",
+    "jsdom": "^11.6.2",
     "jshint": "^2.9.5",
     "mocha": "^4.1.0",
     "mocha-each": "^1.1.0",
