--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
  - "10"
 
 before_script:
- - yarn danger ci
+ # - yarn danger ci
  - npm install grunt-cli -g
  - "export DISPLAY=:99.0"
  - "sh -e /etc/init.d/xvfb start"
